<resources>
    <string name="app_name">Battle Cards</string>

    <string name="txtToBuy">Cards Available</string>
    <string name="txtBought">Cards Bought</string>
    <string name="txtCardsBoughtDescrip">Bought:</string>
    <string name="txtCardsBoughtInitial">0/15</string>
    <string name="txtGoldAmountDescrip">Gold:</string>
    <string name="btnStart">Start</string>

    <string name="txtAttackDescrip">Attack:</string>
    <string name="txtDefenseDescrip">Defense:</string>
    <string name="txtAbilityDescrip">Ability:</string>
    <string name="txtResourceDescrip">Res:</string>
    <string name="txtGoldDescrip">:Gold</string>
</resources>
