<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:context="edu.ftcc.battlecards.DeckCreatorActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtToBuy"
            android:id="@+id/txtToBuy"
            android:layout_marginBottom="15dp"
            android:textSize="12sp"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listToBuy"
            android:choiceMode="singleChoice"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCardsBoughtDescrip"
            android:id="@+id/txtNumCardsBoughtDescrip"
            android:textSize="24sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNumCardsBought"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtGoldAmountDescrip"
            android:id="@+id/txtGoldAmountDescrip"
            android:layout_marginTop="30dp"
            android:textSize="24sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtGoldAmount"
            android:layout_marginTop="5dp"
            android:textSize="24sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStart"
            android:textSize="26sp"
            android:enabled="false"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBought"
            android:id="@+id/txtBought"
            android:layout_marginBottom="15dp"
            android:textSize="12sp"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:id="@+id/listBought" />

    </LinearLayout>

</LinearLayout>
